--- a/pipi_where/WebContent/css/style.css
+++ b/pipi_where/WebContent/css/style.css
@@ -1,1 +1,35 @@
 @charset "UTF-8";
+
+section, article, aside, nav, header, main, footer {
+	display: block;
+}
+
+body {
+	margin: 0;
+	padding: 0;
+	font-size: small;
+	color: #333;
+	background: white;
+}
+
+h1,h2 {
+	color: #222;	
+}
+
+h1 {
+	font-size: x-large;
+}
+h2 {
+	font-size: medium;
+}
+
+p {
+	line-height:1.7;	
+}
+
+a:link, a:visited {
+	color: #37c;
+}
+a:hover {
+	color: #999;
+}
