--- a/pipi_where/WebContent/css/style.css
+++ b/pipi_where/WebContent/css/style.css
@@ -28,11 +28,13 @@ h1 {
 	font-size: x-large;
 }
 h2 {
-	font-size: medium;
+	font-size: large;
 }
 
 p {
-	line-height:1.7;	
+	line-height:1.7;
+	margin-top: 40px;
+	font-size: 18px;
 }
 
 a:link, a:visited {
@@ -45,7 +47,7 @@ a:hover {
 
 #page {
 	margin: 0 auto;
-	width: 900 px;
+	width: 900 px
 }
 
 main {
@@ -103,3 +105,25 @@ nav #current a {
 	background: white;
 }
 
+#sub aside {
+	margin: 20px 40px 20px 20px;
+	padding: 15px;
+	border: 1px solid red;
+	border-radius: 7px;
+	background-color: #f5f5f5;
+	box-shadow:
+	inset 1px 1px 0 white,
+	1px 1px 3px rgba(0, 0, 0, 0.1);
+	text-shadow: 1px 1px 0 white;
+}
+
+#sub h2 {
+	clear: both;
+	margin-top: 0;
+}
+
+#sub img {
+	float: left;
+	margin: 5px 10px 30px 0;
+	clear: both;
+}
