--- a/pipi_where/WebContent/css/style.css
+++ b/pipi_where/WebContent/css/style.css
@@ -1,13 +1,12 @@
 @charset "UTF-8";
 
-section, article, aside, nav, header, main, footer {
-	display: block;
-}
 
 header img {
-	display: inline-block;
+	position:fixed;
+	left:10px;
+	top:10px;
 }
-
+/*
 
 body {
 	margin: 0;
@@ -18,7 +17,7 @@ body {
 }
 
 h1,h2 {
-	color: #34314c;	
+	color: #34314c;
 }
 
 h1 {
@@ -123,3 +122,4 @@ nav #current a {
 	margin: 5px 10px 30px 0;
 	clear: both;
 }
+ */
