--- a/pipi_where/WebContent/css/style.css
+++ b/pipi_where/WebContent/css/style.css
@@ -6,120 +6,19 @@ header img {
 	left:10px;
 	top:10px;
 }
-/*
 
-body {
-	margin: 0;
-	padding: 0;
-	font-size: small;
-	color: #333;
-	background: #FFFFFF;
-}
-
-h1,h2 {
-	color: #34314c;
-}
-
-h1 {
-	font-size: x-large;
-}
-h2 {
-	font-size: large;
-}
-
-p {
-	line-height:1.7;
-	margin-top: 40px;
-	font-size: 18px;
-}
-
-a:link, a:visited {
-	color: #34314c;
-}
-
-a:hover {
-	color: #47b8e0;
-}
-
-#page {
-	margin: 0 auto;
-	width: 900 px
-}
-
-main {
+.no1 {
+	width: 450px;
+	border: 1px solid blue;
 	float: left;
-	width: 450px;
 }
 
-#sub {
+.no2 {
+	width: 450px;
+	border: 1px solid red;
 	float: right;
-	width: 450px;
 }
-
+			 
 footer {
 	clear: both;
 }
-
-#copyright {
-	clear: both;
-}
-
-nav ul {
-	overflow: hidden;
-	margin: 0 0 10px 0;
-	padding: 0;
-	border: 1px solid #f5e4c3;
-	border-radius: 7px;
-	line-height: 1.0;
-	background: #f5e4c3;
-}
-
-nav li, nav a {
-	display: block;
-}
-
-nav li {
-	float: left;
-	border-right: 1px solid #f5e4c3;
-	color: #f59aa3;
-	background: #f5e4c3;
-}
-
-nav a {
-	padding: 15px 25px;
-	font-weight: bold;
-	text-decoration: none;
-}
-
-nav a:hover {
-	background :
-	repeat-x bottom;
-}
-
-nav #current a {
-
-}
-
-#sub aside {
-	margin: 20px 40px 20px 20px;
-	padding: 15px;
-	border: 1px solid #f5e4c3;
-	border-radius: 7px;
-	background-color: #f5e4c3;
-	box-shadow:
-	inset 1px 1px 0 white,
-	1px 1px 3px rgba(0, 0, 0, 0.1);
-	text-shadow: 1px 1px 0 white;
-}
-
-#sub h2 {
-	clear: both;
-	margin-top: 0;
-}
-
-#sub img {
-	float: left;
-	margin: 5px 10px 30px 0;
-	clear: both;
-}
- */
